--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "react-javascript",
-  "version": "1.0.0",
-  "type": "module",
-  "description": "React TypeScript on Replit, using Vite bundler",
+  "name": "AlgorithmVisualizer",
+  "version": "0.1.0",
+  "private": true,
+  "homepage": "http://<username>.github.io/<repository-name>",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
