--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "AlgorithmVisualizer",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://Abby010.github.io/AlgorithmVisualizer",
+  "homepage": "https://abby010.github.io/AlgorithmVisualizer/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
